--- a/bsp/ueventd.rpi.rc
+++ b/bsp/ueventd.rpi.rc
@@ -1,3 +1,3 @@
 # Device needed by shared transport layer
-#/dev/rfkill                             0660   bluetooth  bluetooth
 /dev/ttyAMA0                            0660   bluetooth  net_bt_stack
+/dev/watchdog                           0660   system     root
